# jolto-cgi-task

./: .dockerignore  .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  EXTENSIONS.md  WALKTHROUGH.md
examples/: brief.md  demo_plan.py  make_placeholder_product.py
examples/outputs/: shot_graph.json
pipeline/: __init__.py  brief_parser.py  config.py  frame_gen.py  presets.py  qa.py  run.py  schema.py  shot_planner.py  stitch.py  video_gen.py  video_gen_gemini.py  video_gen_mock.py
pipeline/identity/: __init__.py  base.py  gemini_direct.py  mock.py  product.py
pipeline/providers/: __init__.py  fal.py  gemini.py  mock.py  registry.py
runs/08c9908aee88/: cost_log.json  shot_graph.json
runs/0f2b4d507d4f/: cost_log.json
runs/4e3e34371006/: cost_log.json  shot_graph.json
runs/refactor-smoke/: cost_log.json  shot_graph.json
server/: __init__.py  auth.py  history.py  main.py  pipeline_runner.py  state.py  suggest.py
server/web/: app.js  index.html  styles.css
